testdata/zkc/invalid/while_invalid_03.zkc
;;error:4:19-20:unexpected token
function f(u8 x) -> (u8 r) {
  r = 0
  while x == (x + ) {
    r = 1
  }
  return
}
